--- a/Test3/Jenkinsfile
+++ b/Test3/Jenkinsfile
@@ -70,7 +70,7 @@ pipeline {
             echo "Build and test succeeded! Sending email..."
             // 이메일 전송 (Email Extension Plugin의 mail 스텝 사용)
             mail (
-                to: "${joonseor@gmail.com}",
+                to: 'joonseor@gmail.com',
                 subject: "Jenkins Build SUCCESS: ${env.JOB_NAME} #${env.BUILD_NUMBER}",
                 body: """
                     Build Result: SUCCESS
